--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@next/bundle-analyzer": "10.0.7",
+    "bulma": "0.9.2",
     "next": "10.0.7",
     "react": "17.0.1",
     "react-dom": "17.0.1"
@@ -28,6 +29,7 @@
     "eslint-plugin-no-null": "1.0.2",
     "eslint-plugin-simple-import-sort": "7.0.0",
     "next-compose-plugins": "2.2.1",
+    "sass": "1.32.8",
     "tsdx": "0.14.1"
   }
 }
