--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@next/bundle-analyzer": "10.0.7",
     "bulma": "0.9.2",
+    "clsx": "1.1.1",
     "next": "10.0.7",
     "react": "17.0.1",
     "react-dom": "17.0.1"
