--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@next/bundle-analyzer": "10.0.7",
+    "array-shuffle": "2.0.0",
     "bulma": "0.9.2",
     "clsx": "1.1.1",
     "next": "10.0.7",
