--- a/package.json
+++ b/package.json
@@ -16,14 +16,15 @@
   },
   "dependencies": {
     "@next/bundle-analyzer": "10.0.7",
-    "array-shuffle": "2.0.0",
     "bulma": "0.9.2",
     "clsx": "1.1.1",
+    "d3-random": "2.2.2",
     "next": "10.0.7",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   },
   "devDependencies": {
+    "@types/d3-random": "2.2.0",
     "@types/react": "17.0.2",
     "cross-env": "7.0.3",
     "del-cli": "3.0.1",
