--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "npm run test && cross-env NODE_ENV=production next build",
     "analyze": "cross-env NODE_ENV=production ANALYZE=true next build",
     "start": "cross-env NODE_ENV=production next start",
-    "dev": "cross-env NODE_ENV=development next -p 7000"
+    "dev": "cross-env NODE_ENV=development next -p 7000",
+    "quote": "node scripts/quote-cli"
   },
   "engines": {
     "node": "14.16.0"
@@ -19,6 +20,7 @@
     "bulma": "0.9.2",
     "clsx": "1.1.1",
     "d3-random": "2.2.2",
+    "nanoid": "3.1.20",
     "next": "10.0.7",
     "react": "17.0.1",
     "react-dom": "17.0.1"
