--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
     "node": "14.16.0"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "1.2.34",
+    "@fortawesome/free-brands-svg-icons": "5.15.2",
+    "@fortawesome/free-regular-svg-icons": "5.15.2",
+    "@fortawesome/free-solid-svg-icons": "5.15.2",
+    "@fortawesome/react-fontawesome": "0.1.14",
     "@next/bundle-analyzer": "10.0.7",
     "bulma": "0.9.2",
     "clsx": "1.1.1",
