--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@fortawesome/react-fontawesome": "0.1.14",
     "@next/bundle-analyzer": "10.0.7",
     "bulma": "0.9.2",
+    "bulma-toast": "2.2.0",
     "clsx": "1.1.1",
     "nanoid": "3.1.20",
     "next": "10.0.7",
