--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "bulma": "0.9.2",
     "bulma-toast": "2.2.0",
     "clsx": "1.1.1",
+    "ellipsize": "0.1.0",
     "nanoid": "3.1.20",
     "next": "10.0.7",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   },
   "devDependencies": {
+    "@types/ellipsize": "0.1.0",
     "@types/react": "17.0.2",
     "cross-env": "7.0.3",
     "del-cli": "3.0.1",
