--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,10 @@
+# Firebase
+
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=
+NEXT_PUBLIC_FIREBASE_APP_ID=
+NEXT_PUBLIC_FIREBASE_API_KEY=
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=
+
+# Plausible
+
 # NEXT_PUBLIC_PLAUSIBLE_DOMAIN=
