--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bulma-toast": "2.2.0",
     "clsx": "1.1.1",
     "ellipsize": "0.1.0",
+    "firebase": "8.3.1",
     "nanoid": "3.1.20",
     "next": "10.0.7",
     "react": "17.0.1",
