--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "nanoid": "3.1.22",
     "next": "10.0.9",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "store2": "2.12.0"
   },
   "devDependencies": {
     "@types/ellipsize": "0.1.0",
