--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "firebase": "8.3.1",
     "nanoid": "3.1.22",
     "next": "10.0.9",
+    "next-seo": "4.23.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "store2": "2.12.0"
