--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/react": "17.0.11",
     "cross-env": "7.0.3",
     "del-cli": "4.0.0",
+    "eslint": "7.28.0",
     "eslint-config-next": "11.0.0",
     "eslint-plugin-no-null": "1.0.2",
     "eslint-plugin-simple-import-sort": "7.0.0",
